--- a/styles/global.css
+++ b/styles/global.css
@@ -40,3 +40,18 @@ input {
     font-size: 2vmin;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.joinButton {
+    margin: 2vmin;
+    margin-top: 5vmin;
+    margin-left: 2vmin;
+    padding: 1vmin;
+    border: 2px solid black;
+    background-color: black;
+    border-radius: 10px;
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 2vmin;
+    font-family: Arial, Helvetica, sans-serif;
+}
